--- a/src/main/resources/templates/addPlayer.html
+++ b/src/main/resources/templates/addPlayer.html
@@ -3,20 +3,38 @@
 <head>
     <meta charset="UTF-8">
     <title>Add Player</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+  <link rel="icon" th:href="@{/img/ball.png}" type="image/x-icon">
 </head>
-<body>
+<body style="background-image: url('/img/lawn.jpg'); background-size: cover; background-position: center;">
+<nav class="navbar navbar-expand-md navbar-dark bg-dark mb-4">
+  <div class="container-fluid">
+    <a class="navbar-brand text-success mb-0 me-3 fw-light" href="/mySport">Welcome to My Sport</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+  </div>
+</nav>
+<div class="text-center">
 
 <h1 th:text="${'Add player to ' + team.getName() }"></h1>
 <form th:action="@{/mySport/team/{teamName}/addPlayer(teamName=${team.getName()})}" method="POST">
+  <div class="form-group mb-3">
   <label for="firstName">First Name:</label>
   <input type="text" id="firstName" name="firstName" required>
+  </div>
 
+  <div class="form-group mb-3">
   <label for="lastName">Last Name:</label>
   <input type="text" id="lastName" name="lastName" required>
+  </div>
 
+  <div class="form-group mb-3">
   <label for="jerseyNumber">Jersey Number:</label>
   <input type="number" id="jerseyNumber" name="jerseyNumber" min="0" required>
+  </div>
 
+  <div class="form-group mb-3">
   <label for="position">Position:</label>
   <select id="position" name="position" required>
     <option value="FORWARD">Forward</option>
@@ -25,7 +43,14 @@
     <option value="GOALKEEPER">Goalkeeper</option>
     <option value="SUB">Sub</option>
   </select>
-  <input type="submit" value="Create Player">
+  </div>
+  <input type="submit" value="Create Player" class="mb-3">
 </form>
+<h1 th:if="${playerWithSuchJerseyNumberAlreadyExist}" th:text="${playerWithSuchJerseyNumberAlreadyExist}"></h1>
+
+<a th:href="@{/mySport/team/{teamName}(teamName=${team.getName()})}" class="btn-close btn-lg p-3 mb-3" aria-label="Close"></a>
+</div>
+
+
 </body>
 </html>
