--- a/src/main/resources/templates/createGame.html
+++ b/src/main/resources/templates/createGame.html
@@ -3,30 +3,50 @@
 <head>
     <meta charset="UTF-8">
     <title>CreateGame</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+    <link rel="icon" th:href="@{/img/ball.png}" type="image/x-icon">
 </head>
-<body>
+<body style="background-image: url('/img/lawn.jpg'); background-size: cover; background-position: center;">
+<nav class="navbar navbar-expand-md navbar-dark bg-dark mb-4">
+    <div class="container-fluid">
+        <a class="navbar-brand text-success mb-0 me-3 fw-light" href="/mySport">Welcome to My Sport</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+    </div>
+</nav>
 
+<div class="text-center">
 <h1>Create new Game</h1>
 
 <form method="POST" th:action="@{/mySport/{leagueName}/createGame(leagueName=${league.getName()})}" >
+    <div class="form-group mb-3">
     <label for="firstTeam">Select first team:</label>
     <select id="firstTeam" name="firstTeam">
         <option th:each="team : ${league.getTeams()}" th:value="${team.getName()}" th:text="${team.getName()}"></option>
     </select>
+    </div>
+    <div class="form-group mb-3">
     <label for="secondTeam">Select second team:</label>
     <select id="secondTeam" name="secondTeam">
         <option th:each="team : ${league.getTeams()}" th:value="${team.getName()}" th:text="${team.getName()}" ></option>
     </select>
-
+    </div>
     <input type="hidden" id="league" name="league" th:value="${league.getName()}">
 
+    <div class="form-group mb-3">
     <label for="date">Date and Time:</label>
     <input type="datetime-local" id="date" name="gameDate" required>
-
-    <button type="submit">Create</button>
+    </div>
+    <button type="submit" class="btn btn-primary mb-3">Create</button>
 </form>
 
 <h2 th:if="${sameTeamError}" th:text="${sameTeamError}"></h2>
+
+
+<a th:href="@{/mySport/{leagueName}(leagueName=${league.getName()})}" class="btn-close btn-lg p-3 mb-3" aria-label="Close"></a>
+</div>
+
 
 </body>
 </html>
