--- a/src/main/resources/templates/createTeam.html
+++ b/src/main/resources/templates/createTeam.html
@@ -3,16 +3,31 @@
 <head>
     <meta charset="UTF-8">
     <title>Create Team</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+    <link rel="icon" th:href="@{/img/ball.png}" type="image/x-icon">
 </head>
-<body>
+<body style="background-image: url('/img/lawn.jpg'); background-size: cover; background-position: center;">
+<nav class="navbar navbar-expand-md navbar-dark bg-dark mb-4">
+    <div class="container-fluid">
+        <a class="navbar-brand text-success mb-0 me-3 fw-light" href="/mySport">Welcome to My Sport</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+    </div>
+</nav>
+<div class="text-center">
 
 <form method="post" th:action="@{/mySport/{leagueName}/createTeam(leagueName=${league.getName()})}">
-  <label for="teamName">Team Name:</label>
-  <input type="text" id="teamName" name="teamName" required>
-
-  <input type="submit" value="Submit">
+    <div class="form-group mb-3">
+    <label for="teamName">Team Name:</label>
+    <input type="text" id="teamName" name="teamName" required>
+    </div>
+  <input type="submit" value="Submit" class="btn btn-primary mb-3">
 </form>
 <h2 th:if="${teamAlreadyExist}" th:text="${teamAlreadyExist}"></h2>
+
+<a th:href="@{/mySport/{leagueName}(leagueName=${league.getName()})}" class="btn-close btn-lg p-3 mb-3" aria-label="Close"></a>
+</div>
 
 </body>
 </html>
