--- a/src/main/resources/templates/leaguePage.html
+++ b/src/main/resources/templates/leaguePage.html
@@ -3,30 +3,81 @@
 <head>
     <meta charset="UTF-8">
     <title th:text="${league.getName()}"></title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+    <link rel="icon" th:href="@{/img/ball.png}" type="image/x-icon">
 </head>
-<body>
-<h1 th:text="${league.getName()}"></h1>
-<div>
-    <h3>See all teams</h3>
-    <ul>
-        <li th:each="team : ${league.getTeams()}"><a th:href="@{/mySport/team/{teamName}(teamName=${team.getName()})}" th:text="${team.getName()}"></a></li>
-    </ul>
+<body style="background-image: url('/img/lawn.jpg'); background-size: cover; background-position: center;">
+<nav class="navbar navbar-expand-md navbar-dark bg-dark mb-4">
+    <div class="container-fluid">
+        <a class="navbar-brand text-success mb-0 me-3 fw-light" href="/mySport">Welcome to My Sport</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+    </div>
+</nav>
+
+<h1 th:text="${league.getName()}" class="text-center"></h1>
+
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-md-3">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-8">
+                        <div class="list-group">
+                            <h3 class="list-group-item active bg-success bg-subtle border-primary-subtle rounded-3">See all teams</h3>
+                            <a th:each="team : ${league.getTeams()}" th:href="@{/mySport/team/{teamName}(teamName=${team.getName()})}" th:text="${team.getName()}" class="list-group-item list-group-item-action" ></a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-6 ml-md-auto">
+            <div class="container">
+                <div class="row justify-content-center">
+                    <div class="col-md-12">
+                        <h1 class="text-center">Games</h1>
+                        <div th:each="game : ${games}">
+                            <h3>
+                                <a th:href="@{/mySport/{leagueName}/{matchId}(leagueName=${league.getName()}, matchId=${game.getId()})}"
+                                   th:text="${game.getFirst_team().getName() + ' - ' + game.getSecond_team().getName() + '   ' + game.getGameDate()}"
+                                   class="list-group-item list-group-item-action "></a>
+                            </h3>
+                            <form th:if="${admin}" th:action="@{/mySport/{leagueName}/deleteGame(leagueName=${league.getName()})}" method="POST">
+                                <input type="hidden" name="gameId" th:value="${game.getId()}">
+                                <button type="submit">Delete</button>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
 
-<div th:each="game : ${games}">
-    <h3>
-        <a th:href="@{/mySport/{leagueName}/{matchId}(leagueName=${league.getName()}, matchId=${game.getId()})}"
-           th:text="${game.getFirst_team().getName() + ' - ' + game.getSecond_team().getName() + '   ' + game.getGameDate()}"></a>
-    </h3>
-    <form th:if="${admin}" th:action="@{/mySport/{leagueName}/deleteGame(leagueName=${league.getName()})}" method="POST">
-        <input type="hidden" name="gameId" th:value="${game.getId()}">
-        <button type="submit">Delete</button>
-    </form>
-</div>
+
+<!--<h1 th:text="${league.getName()}"></h1>-->
+<!--<div>-->
+<!--    <h3>See all teams</h3>-->
+<!--    <ul>-->
+<!--        <li th:each="team : ${league.getTeams()}"><a th:href="@{/mySport/team/{teamName}(teamName=${team.getName()})}" th:text="${team.getName()}"></a></li>-->
+<!--    </ul>-->
+<!--</div>-->
+
+<!--<div th:each="game : ${games}">-->
+<!--    <h3>-->
+<!--        <a th:href="@{/mySport/{leagueName}/{matchId}(leagueName=${league.getName()}, matchId=${game.getId()})}"-->
+<!--           th:text="${game.getFirst_team().getName() + ' - ' + game.getSecond_team().getName() + '   ' + game.getGameDate()}"></a>-->
+<!--    </h3>-->
+<!--    <form th:if="${admin}" th:action="@{/mySport/{leagueName}/deleteGame(leagueName=${league.getName()})}" method="POST">-->
+<!--        <input type="hidden" name="gameId" th:value="${game.getId()}">-->
+<!--        <button type="submit">Delete</button>-->
+<!--    </form>-->
+<!--</div>-->
 
 <div th:if="${admin}">
-    <a th:href="@{/mySport/{leagueName}/createGame(leagueName=${league.getName()})}">Create New Game</a>
-    <a th:href="@{/mySport/{leagueName}/createTeam(leagueName=${league.getName()})}">Create New Team</a>
+    <a th:href="@{/mySport/{leagueName}/createGame(leagueName=${league.getName()})}" class="btn btn-primary">Create New Game</a>
+    <a th:href="@{/mySport/{leagueName}/createTeam(leagueName=${league.getName()})}" class="btn btn-primary">Create New Team</a>
 </div>
 
 
