--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,23 +1,31 @@
 <html lang="en">
 <head>
-  <meta charset="utf-8">
-  <title>Login Customer</title>
+    <meta charset="utf-8">
+    <title>Login Customer</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+    <link rel="icon" th:href="@{/img/ball.png}" type="image/x-icon">
 </head>
-<body>
-<div class="container">
-  <form class="form-signin" method="post" action="/auth/login">
-    <h2 class="form-signin-heading">Login</h2>
-    <p>
-      <label for="username">Username</label>
-      <input type="text" id="username" name="username" class="form-control" placeholder="Username" required>
-    </p>
-    <p>
-      <label for="password">Password</label>
-      <input type="password" id="password" name="password" class="form-control" placeholder="Password" required>
-    </p>
-    <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
-  </form>
-  <a href="/auth/sign-up">Create an account</a>
+<body class="d-flex align-items-center bg-body-tertiary">
+<main class="form-sign w-25 m-auto">
+    <div class="container d-flex justify-content-between align-items-center">
+        <form class="form-signin" method="post" action="/auth/login">
+            <h2 class="form-signin-heading">Login</h2>
+            <p>
+                <label for="username">Username</label>
+                <input type="text" id="username" name="username" class="form-control" placeholder="Username" required>
+            </p>
+            <p>
+                <label for="password">Password</label>
+                <input type="password" id="password" name="password" class="form-control" placeholder="Password" required>
+            </p>
+            <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
+            <a class="btn btn-lg btn-primary btn-block" href="/auth/sign-up">Create an account</a>
+        </form>
+
 </div>
+</main>
 </body>
 </html>
+
+
