--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -3,40 +3,72 @@
 <head>
     <meta charset="UTF-8">
     <title>MySport</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+    <link rel="icon" th:href="@{/img/ball.png}" type="image/x-icon">
 </head>
-<body>
-<h1>Welcome to MySport</h1>
-<h1 th:if="${user}" th:text="${user.getName()}"></h1>
-<div th:if="${admin}">
-    <a href="/mySport/admin">Go to admin page</a>
-</div>
-<div th:each="league : ${leagues}">
-   <h1><a th:text="${league.getName()}" th:href="@{/mySport/{leagueName}(leagueName=${league.getName()})}"></a></h1>
+<body
+        style="background-image: url('/img/lawn.jpg'); background-size: cover; background-position: center;">
+
+<nav class="navbar navbar-expand-md navbar-dark bg-dark mb-4">
+    <div class="container-fluid">
+        <a class="navbar-brand text-success mb-0 me-3 fw-light" href="/mySport">Welcome to My Sport</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarCollapse">
+            <ul class="navbar-nav me-auto mb-2 mb-md-0">
+                <li class="nav-item">
+                    <h3 class="text-success mb-0 me-3 fw-light" th:text="${user.getName()}"></h3>
+                </li>
+                <li class="nav-item">
+                    <form action="/auth/logout" method="POST">
+                        <button class="btn btn-outline-success" type="submit">Logout</button>
+                    </form>
+                </li>
+            </ul>
+            <form class="d-flex" action="/mySport" method="POST" role="search">
+                <input class="form-control me-2" type="text" name="query" placeholder="Search" aria-label="Search" required>
+                <button class="btn btn-outline-success" type="submit">Search</button>
+            </form>
+            <h3 class="text-success mt-2 ms-2 fw-light" th:if="${noTeamFound}" th:text="${noTeamFound}"></h3>
+        </div>
+    </div>
+</nav>
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-md-3">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-8">
+                        <div class="list-group">
+                            <h3 class="list-group-item active bg-success bg-subtle border-primary-subtle rounded-3">Ліги</h3>
+                            <a th:each="league : ${leagues}" th:text="${league.getName()}" th:href="@{/mySport/{leagueName}(leagueName=${league.getName()})}" class="list-group-item list-group-item-action"></a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-6 ml-md-auto">
+            <div class="container">
+                <div class="row justify-content-center">
+                    <div class="col-md-12">
+                        <h1 class="text-center">Upcoming matches</h1>
+                        <div th:each="league : ${leagues}" >
+                            <h1 th:text="${league.getName()}" class="text-center"></h1>
+                            <ul th:each="game : ${leagueService.getUpComingLeagueGames(league.getId())}" class="list-group" >
+                                <li class="list-group-item list-group-item-action ">
+                                    <a th:href="@{/mySport/{leagueName}/{matchId}(leagueName=${league.getName()}, matchId=${game.getId()})}"
+                                       th:text="${game.getFirst_team().getName() + ' - ' + game.getSecond_team().getName() + '   ' + game.getGameDate()}"
+                                    class="nav-link"></a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
 
-<h1>Upcoming matches</h1>
-<div th:each="league : ${leagues}">
-    <h1 th:text="${league.getName()}"></h1>
-    <ul th:each="game : ${leagueService.getUpComingLeagueGames(league.getId())}">
-        <li>
-            <a th:href="@{/mySport/{leagueName}/{matchId}(leagueName=${league.getName()}, matchId=${game.getId()})}"
-               th:text="${game.getFirst_team().getName() + ' - ' + game.getSecond_team().getName() + '   ' + game.getGameDate()}"></a>
-        </li>
-    </ul>
-</div>
-<div>
-<form action="/mySport" method="POST">
-    <label>
-        <input type="text" name="query" placeholder="Search..." required>
-    </label>
-    <button type="submit">Search</button>
-</form>
-    <h2 th:if="${noTeamFound}" th:text="${noTeamFound}"></h2>
-</div>
-
-
-<form action="/auth/logout" method="POST">
-  <button type="submit">Logout</button>
-</form>
 </body>
 </html>
