--- a/src/main/resources/templates/signUp.html
+++ b/src/main/resources/templates/signUp.html
@@ -3,28 +3,30 @@
 <head>
     <meta charset="UTF-8">
     <title>Sign-Up</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+    <link rel="icon" th:href="@{/img/ball.png}" type="image/x-icon">
 </head>
 <body>
-
-<h2>Register</h2>
-<form method="POST" action="/auth/sign-up" th:object="${user}">
-    <div class="form-group">
-        <label for="email">Email</label>
-        <input type="email" class="form-control" th:field="*{email}" id="email" required>
-    </div>
-    <div>
-        <label for="name">Name:</label>
-        <input type="text" id="name" th:field="*{name}" required/>
-    </div>
-    <div>
-        <label for="password">Password:</label>
-        <input type="password" id="password" th:field="*{password}" required/>
-    </div>
-    <button type="submit" class="btn btn-primary">Register</button>
-</form>
-
-<h1 th:if="${emailExist}" th:text="${emailExist}"></h1>
-
+<div class="container">
+    <h2>Register</h2>
+    <form method="POST" action="/auth/sign-up" th:object="${user}">
+        <div class="mb-3">
+            <label for="email" class="form-label">Email</label>
+            <input type="email" class="form-control col-sm-6" th:field="*{email}" id="email" required>
+        </div>
+        <div class="mb-3">
+            <label for="name" class="form-label">Name:</label>
+            <input type="text" id="name" class="form-control col-sm-6" th:field="*{name}" required/>
+        </div>
+        <div class="mb-3">
+            <label for="password" class="form-label">Password:</label>
+            <input type="password" id="password" class="form-control col-sm-6" th:field="*{password}" required/>
+        </div>
+        <button type="submit" class="btn btn-primary">Register</button>
+    </form>
+    <a class="btn btn-secondary mt-3" role="button" href="/auth/login">Get Back to Login Page</a>
+    <h1 th:if="${emailExist}" th:text="${emailExist}"></h1>
+</div>
 
 
 </body>
