--- a/src/main/resources/templates/teamPage.html
+++ b/src/main/resources/templates/teamPage.html
@@ -3,43 +3,90 @@
 <head>
     <meta charset="UTF-8">
     <title th:text="${team.getName()}"></title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+    <link rel="icon" th:href="@{/img/ball.png}" type="image/x-icon">
 </head>
-<body>
+<body style="background-image: url('/img/lawn.jpg'); background-size: cover; background-position: center;">
+<nav class="navbar navbar-expand-md navbar-dark bg-dark mb-4">
+    <div class="container-fluid">
+        <a class="navbar-brand text-success mb-0 me-3 fw-light" href="/mySport">Welcome to My Sport</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+    </div>
+</nav>
 
-<h1 th:text="${team.getName()}"></h1>
-<h1 th:if="${team.getCoach() != null}" th:text="${'Team coach - ' + team.getCoach()}"></h1>
+<h1 th:text="${team.getName()}" class="text-center"></h1>
+<h1 th:if="${team.getCoach() != null}" th:text="${'Team coach - ' + team.getCoach()}" class="text-center"></h1>
 <h2 th:if="${coachAlreadyExist}" th:text="${coachAlreadyExist}"></h2>
-<div th:if="${admin}">
+
+
+
+
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-md-3">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-8">
+                        <div class="list-group d-flex align-items-start ">
+                            <h3 class="list-group-item active bg-success bg-subtle bg-subtle">Squad</h3>
+                                <div th:each="player : ${team.getPlayers()}" class="d-flex justify-content-between align-items-center">
+                                    <ul class="list-group d-flex align-items-start" >
+                                        <li th:text="${player.getFirstName() + ' ' + player.getJerseyNumber() + ' ' + player.getPosition()}" class="list-group-item list-group-item-dark w-100"></li>
+                                    </ul>
+                                    <form th:if="${admin}" th:action="@{/mySport/team/{teamName}/deletePlayer(teamName=${team.getName()})}" method="post">
+                                        <input type="hidden" name="playerId" th:value="${player.getId()}">
+                                        <button type="submit">Delete</button>
+                                    </form>
+                                </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-6 ml-md-auto">
+            <div class="container">
+                <div class="row justify-content-center">
+                    <div class="col-md-12">
+                        <h1 class="text-center">Games</h1>
+                        <div th:each="game : ${team.getGames()}" class="game-card">
+                            <h3>
+                                <a th:href="@{/mySport/{leagueName}/{matchId}(leagueName=${team.getLeague().getName()}, matchId=${game.getId()})}"
+                                   th:text="${game.getFirst_team().getName() + ' - ' + game.getSecond_team().getName() + '   ' + game.getGameDate()}"
+                                   class="list-group-item list-group-item-action text-center"></a>
+                            </h3>
+                        </div>
+                        <div th:each="game : ${team.getAwayGames()}" class="game-card">
+                            <h3>
+                                <a th:href="@{/mySport/{leagueName}/{matchId}(leagueName=${team.getLeague().getName()}, matchId=${game.getId()})}"
+                                   th:text="${game.getFirst_team().getName() + ' - ' + game.getSecond_team().getName() + '   ' + game.getGameDate()}"
+                                   class="list-group-item list-group-item-action text-center"></a>
+                            </h3>
+                        </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+
+<div th:if="${admin}" class="mb-3">
     <form th:action="@{/mySport/team/{teamName}/setCoach(teamName=${team.getName()})}" method="post">
         <label for="coachName">Set Coach</label>
         <input type="text" id="coachName" name="coachName" required>
-        <button type="submit">Create</button>
+        <button type="submit">Set</button>
     </form>
 </div>
 
-<a th:if="${admin}" th:href="@{/mySport/team/{teamName}/addPlayer(teamName=${team.getName()})}">Create new player</a>
+<a th:if="${admin}" th:href="@{/mySport/team/{teamName}/addPlayer(teamName=${team.getName()})}" class="btn btn-primary mt-3 bg-success bg-subtle bg-subtle">Create new player</a>
 
-<h1>Squad</h1>
-<div th:each="player : ${team.getPlayers()}">
-    <h3 th:text="${player.getFirstName() + ' Jersey Number ' + player.getJerseyNumber() + ' Position - ' + player.getPosition()}"></h3>
-    <form th:if="${admin}" th:action="@{/mySport/team/{teamName}/deletePlayer(teamName=${team.getName()})}" method="post">
-        <input type="hidden" name="playerId" th:value="${player.getId()}">
-        <button type="submit">Delete</button>
-    </form>
-</div>
 
-<div th:each="game : ${team.getGames()}">
-    <h3>
-        <a th:href="@{/mySport/{leagueName}/{matchId}(leagueName=${team.getLeague().getName()}, matchId=${game.getId()})}"
-           th:text="${game.getFirst_team().getName() + ' - ' + game.getSecond_team().getName() + '   ' + game.getGameDate()}"></a>
-    </h3>
-</div>
-<div th:each="game : ${team.getAwayGames()}">
-    <h3>
-        <a th:href="@{/mySport/{leagueName}/{matchId}(leagueName=${team.getLeague().getName()}, matchId=${game.getId()})}"
-           th:text="${game.getFirst_team().getName() + ' - ' + game.getSecond_team().getName() + '   ' + game.getGameDate()}"></a>
-    </h3>
-</div>
+
+
+
 
 </body>
 </html>
